objects/privacycenter__Data_Policy__mdt.object
<CustomObject>
    <fields>
        <fullName>privacycenter__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Anonymize_Case_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymize Case Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>privacycenter__Delete_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Delete_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Last_Edit_By__c</fullName>
        <label>Last Edit By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Last_Edit__c</fullName>
        <label>Last Edit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>privacycenter__Last_Prepped_Date__c</fullName>
        <label>Last Prepped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>privacycenter__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privacycenter__Run_Frequency__c</fullName>
        <label>Run Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privacycenter__Scheduled_Start__c</fullName>
        <label>Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>privacycenter__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privacycenter__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Policy</label>
    <listViews>
        <fullName>privacycenter__All_Data_Policies</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>privacycenter__Status__c</columns>
        <columns>privacycenter__Last_Edit__c</columns>
        <columns>privacycenter__Last_Edit_By__c</columns>
        <columns>privacycenter__Active__c</columns>
        <columns>privacycenter__Run_Frequency__c</columns>
        <columns>privacycenter__Scheduled_Start__c</columns>
        <columns>privacycenter__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Data Policies</label>
    </listViews>
    <pluralLabel>Data Policies</pluralLabel>
</CustomObject>